syntax = "proto3";

package proto;

message PermissionData {
    string AccessToken = 1;
    int32 Permission = 2;
}

message TokenData {
    string AccessToken = 1;
}

message Error {
    string Message = 1;
    int32 StatusCode = 2;
}

message AccessTokenRequest {
    string UserID = 1;
}

message AccessTokenResponse {
    string AccessToken = 1;
}

service PermissionService {
    rpc ValidateToken(TokenData) returns (Error) {}
    rpc HasPermission(PermissionData) returns (Error) {}
    rpc GetMonzoAccessToken(AccessTokenRequest) returns (AccessTokenResponse) {}
}